--- a/docs/pages/introduction.mdx
+++ b/docs/pages/introduction.mdx
@@ -1,4 +1,4 @@
-# Dolos
+# Introduction
 
 Dolos is a new type of Cardano node, fine-tuned to solve a very narrow scope: keeping an updated copy of the ledger and replying to queries from trusted clients, while requiring a small fraction of the resources
 
