docs: update docs with latest config changes

--- a/docs/pages/running/sync.mdx
+++ b/docs/pages/running/sync.mdx
@@ -1,1 +1,9 @@
-# Sync
+# `sync` mode
+
+The `sync` command starts Dolos in mode where it only perform upstream synchronization. This involves connecting to the upstream node to pull chain updates and update local state. In this mode Dolos will not expose any API to the outside.
+
+To start Dolos in `daemon` mode run the following command from the terminal:
+
+```
+dolos daemon
+```
