--- a/docs/pages/installation/binaries.mdx
+++ b/docs/pages/installation/binaries.mdx
@@ -36,3 +36,4 @@ brew install txpipe/tap/dolos
 | [dolos-x86_64-apple-darwin.tar.xz](https://github.com/txpipe/dolos/releases/latest/download/dolos-x86_64-apple-darwin.tar.xz) | Intel macOS |
 | [dolos-x86_64-pc-windows-msvc.zip](https://github.com/txpipe/dolos/releases/latest/download/dolos-x86_64-pc-windows-msvc.zip) | x64 Windows |
 | [dolos-x86_64-unknown-linux-gnu.tar.xz](https://github.com/txpipe/dolos/releases/latest/download/dolos-x86_64-unknown-linux-gnu.tar.xz) | x64 Linux |
+| [dolos-aarch64-unknown-linux-gnu.tar.xz](https://github.com/txpipe/dolos/releases/latest/download/dolos-aarch64-unknown-linux-gnu.tar.xz) | ARM64 Linux |
