--- a/docs/pages/rationale.mdx
+++ b/docs/pages/rationale.mdx
@@ -1,8 +1,5 @@
-# Introduction
+# Rationale
 
-Dolos is a new type of Cardano node, fine-tuned to solve a very narrow scope: keeping an updated copy of the ledger and replying to queries from trusted clients, while requiring a small fraction of the resources
-
-# Motivation
 Cardano nodes can assume one of two roles:
 
 - block producer: in charge of minting blocks
@@ -28,7 +25,8 @@ This new role would be useful in the following scenarios:
 - As a node that scales horizontally, allowing high-availability topologies.
 - As a low resource local node for resolving local state queries.
 
-# Detailed design
+## Detailed design
+
 Data nodes will share some of the features with the mainstream Cardano node:
 
 - Node-to-Node and Node-to-Client Chain-Sync mini-protocol
