--- a/docs/pages/apis/blaze.mdx
+++ b/docs/pages/apis/blaze.mdx
@@ -3,9 +3,9 @@ import { Callout } from "nextra/components";
 
 # Blaze
 
-Blaze is a NodeJS library for creating Cardano transactions and off-chain code for your Aiken contracts in JavaScript. You can learn more about Blaze [in their documentation site](https://blaze.butane.dev/).
+Blaze is a NodeJS library for creating Cardano transactions and off-chain code for your Cardano Smart Contracts in JavaScript. You can learn more about Blaze [in their documentation site](https://blaze.butane.dev/).
 
-Blaze supports multiple backend providers for interacting with the Cardano network. One of those providers is `U5C` (short for UtxoRPC) which is one of the APIs supported by Dolos. You can learn more about U5C in the [U5C documentation](./grpc.mdx).
+Blaze supports multiple backend providers for interacting with the Cardano network. One of those providers is `U5C` (short for UTxORPC) which is one of the APIs supported by Dolos. You can learn more about U5C in the [U5C documentation](./grpc.mdx).
 
 ## Installation
 
