--- a/docs/pages/configuration/schema.mdx
+++ b/docs/pages/configuration/schema.mdx
@@ -16,6 +16,7 @@ max_wal_history = 10000
 byron_path = "byron.json"
 shelley_path = "shelley.json"
 alonzo_path = "alonzo.json"
+conway_path = "conway.json"
 
 [sync]
 pull_batch_size = 100
@@ -86,10 +87,12 @@ Dolos requires Cardano genesis data to operate. For simplicity sake, we've decid
 | byron_path   | string | "./byron.json"   |
 | shelley_path | string | "./shelley.json" |
 | alonzo_path  | string | "./alonzo.json"  |
+| conway_path  | string | "./conway.json"  |
 
 - `byron_path`: file path to the Byron json genesis file
 - `shelley_path`: file path to the Shelley json genesis file
 - `alonzo_path`: file path to the Alonzo json genesis file
+- `conway_path`: file path to the Conway json genesis file
 
 
 ### `sync` section
