--- a/docs/pages/installation/binaries.mdx
+++ b/docs/pages/installation/binaries.mdx
@@ -28,6 +28,14 @@ You can use Homebrew to install the latest version of Dolos in supported systems
 brew install txpipe/tap/dolos
 ```
 
+## Install via NPM
+
+You can use NPM to install the latest version of Dolos in supported systems (Mac / Linux)
+
+```sh
+npm install @txpipe/dolos
+```
+
 ## Download Binaries
 
 |  File  | Platform |
