docs: update internal documentation links for Starlight migration

--- a/docs/content/APIs/blaze.mdx
+++ b/docs/content/APIs/blaze.mdx
@@ -7,7 +7,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 Blaze is a NodeJS library for creating Cardano transactions and off-chain code for your Cardano Smart Contracts in JavaScript. You can learn more about Blaze [in their documentation site](https://blaze.butane.dev/).
 
-Blaze supports multiple backend providers for interacting with the Cardano network. One of those providers is `U5C` (short for UTxORPC) which is one of the APIs supported by Dolos. You can learn more about U5C in the [U5C documentation](./grpc.mdx).
+Blaze supports multiple backend providers for interacting with the Cardano network. One of those providers is `U5C` (short for UTxORPC) which is one of the APIs supported by Dolos. You can learn more about U5C in the [U5C documentation](./grpc).
 
 ## Installation
 
