--- a/docs/content/Configuration/index.mdx
+++ b/docs/content/Configuration/index.mdx
@@ -9,7 +9,7 @@ import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 Dolos configuration defines concerns such as toplogy, storage, APIs, logging, etc. Dolos also requires Cardano genesis data to operate. For the sake of simplicity, we've decided to follow the schema for the existing .json files used by the Haskell node.
 
 <CardGrid>
-  <LinkCard title="Initialize" href="./initialize" />
-  <LinkCard title="Sources" href="./sources" />
-  <LinkCard title="Schema" href="./schema" />
+  <LinkCard title="Initialize" href="./configuration/initialize" />
+  <LinkCard title="Sources" href="./configuration/sources" />
+  <LinkCard title="Schema" href="./configuration/schema" />
 </CardGrid>
