--- a/docs/content/Installation/docker.mdx
+++ b/docs/content/Installation/docker.mdx
@@ -20,7 +20,7 @@ The entry-point of the image points to _Dolos_ executable. You can pass the same
 docker run -it ghcr.io/txpipe/dolos:latest --help
 ```
 
-For more information on available command-line arguments, check the [usage](../usage/index.md) section.
+For more information on available command-line arguments, check the [usage](../running/modes) section.
 
 ## Using a Configuration File
 
