--- a/docs/content/Installation/index.mdx
+++ b/docs/content/Installation/index.mdx
@@ -9,7 +9,7 @@ import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 Dolos provides different installation mechanisms depending on your requirements.
 
 <CardGrid>
-  <LinkCard title="Binary Release" href="./binaries" />
-  <LinkCard title="Docker" href="./docker" />
-  <LinkCard title="From Source" href="./source" />
+  <LinkCard title="Binary Release" href="./installation/binaries" />
+  <LinkCard title="Docker" href="./installation/docker" />
+  <LinkCard title="From Source" href="./installation/source" />
 </CardGrid>
