--- a/docs/content/Bootstrap/index.mdx
+++ b/docs/content/Bootstrap/index.mdx
@@ -13,6 +13,6 @@ In the context of Dolos, we use the term _bootstrap_ to refer to the process of 
 In Dolos we present a few bootstrapping options:
 
 <CardGrid>
-    <LinkCard title="Relay Node" href="./relay" />
-    <LinkCard title="Mithril Snapshot" href="./mithril" />
+    <LinkCard title="Relay Node" href="./bootstrap/relay" />
+    <LinkCard title="Mithril Snapshot" href="./bootstrap/mithril" />
 </CardGrid>
