chore: hide sidebar for Bootstrap, Configuration, and Installation documentation; remove unused index file

--- a/docs/content/Bootstrap/index.mdx
+++ b/docs/content/Bootstrap/index.mdx
@@ -3,6 +3,7 @@ title: Bootstrap Procedure
 sidebar:
     label: Bootstrap
     order: 3
+    hidden: true
 ---
 
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
