--- a/docs/content/Configuration/index.mdx
+++ b/docs/content/Configuration/index.mdx
@@ -2,6 +2,7 @@
 title: Configuration
 sidebar:
   order: 2
+  hidden: true
 ---
 
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
