--- a/docs/content/Installation/index.mdx
+++ b/docs/content/Installation/index.mdx
@@ -2,6 +2,7 @@
 title: Installation
 sidebar:
   order: 1
+  hidden: true
 ---
 
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
