--- a/docs/pages/bootstrap/snapshot.mdx
+++ b/docs/pages/bootstrap/snapshot.mdx
@@ -9,7 +9,7 @@ TxPipe generates daily snapshots for the storage of Dolos. This comes in 2 varie
 
 ## Execution
 
-To execute the _Mithril_ bootstrap procedure, you need to run the following command line:
+To execute the snapshot bootstrap procedure, you need to run the following command line:
 
 ```sh
 dolos bootstrap snapshot --variant full|ledger
