--- a/docs/content/bootstrap/mithril.mdx
+++ b/docs/content/bootstrap/mithril.mdx
@@ -1,10 +1,10 @@
 ---
 title: Mithril Snapshot
+sidebar:
+  order: 2
 ---
 
 import { Aside } from '@astrojs/starlight/components';
-
-# Bootstrap using a Mithril Snapshot
 
 _Mithril_ is a signature scheme that generates a certificate to convince verifiers that a portion of the stake of a system has signed a message. There's currently a network of Cardano SPOs continuosuly verifing snapshots of the history of the chain and making them available for consumption by client applications, such as Dolos.
 
