--- a/docs/content/configuration/schema.mdx
+++ b/docs/content/configuration/schema.mdx
@@ -22,6 +22,17 @@ shelley_path = "shelley.json"
 alonzo_path = "alonzo.json"
 conway_path = "conway.json"
 
+[chain]
+type = "Cardano"
+
+[chain.track]
+seen_addresses = true
+asset_state = true
+pool_state = true
+pool_delegator = true
+epoch_state = true
+account_activity = true
+
 [sync]
 pull_batch_size = 100
 
@@ -109,7 +120,27 @@ Dolos requires Cardano genesis data to operate. For simplicity sake, we've decid
 - `conway_path`: file path to the Conway json genesis file
 - `force_protocol`: (optional) the protocol version to force the node to start from. This is useful for networks such as `preview` which skips the Byron era.
 
-### `sync` section
+## `chain.track` section
+
+| property          | type    | default |
+| ----------------- | ------- | ------- |
+| seen_addresses    | boolean | true    |
+| asset_state       | boolean | true    |
+| pool_state        | boolean | true    |
+| pool_delegator    | boolean | true    |
+| epoch_state       | boolean | true    |
+| account_activity  | boolean | true    |
+| reward_logs       | boolean | true    |
+
+- `seen_addresses`: Tracks whether addresses have been observed.
+- `asset_state`: Monitors the state of assets.
+- `pool_state`: Keeps track of the state of pools.
+- `pool_delegator`: Observes delegator information for pools.
+- `epoch_state`: Tracks the state of epochs.
+- `account_activity`: Monitors activity related to accounts.
+- `reward_logs`: Keeps track of rewards for each delegator in each epoch
+
+## `sync` section
 
 The `sync` section controls how Dolos synchronizes the chain from upstream peers. This involves fetch a batch of blocks from the upstream node and updating the corresponding local storage.
 
