--- a/docs/content/bootstrap/index.mdx
+++ b/docs/content/bootstrap/index.mdx
@@ -7,12 +7,13 @@ sidebar:
 
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 
-
 In the context of Dolos, we use the term _bootstrap_ to refer to the process of updating Dolos with the current state of the chain. This is usually a long process that involves processing a lot of data. There're ways to speed up process.
 
 In Dolos we present a few bootstrapping options:
 
 <CardGrid>
-    <LinkCard title="Relay Node" href="./bootstrap/relay" />
+    <LinkCard title="Public Relay" href="./bootstrap/relay" />
+    <LinkCard title="Local Full Node" href="./bootstrap/node" />
     <LinkCard title="Mithril Snapshot" href="./bootstrap/mithril" />
+    <LinkCard title="Dolos Snapshot" href="./bootstrap/snapshot" />
 </CardGrid>
