--- a/docs/content/bootstrap/local.mdx
+++ b/docs/content/bootstrap/local.mdx
@@ -1,15 +1,13 @@
 ---
-title: Public Relay
-sidebar:
-  order: 3
+title: Local Node
 ---
 
 import { Aside } from '@astrojs/starlight/components';
 
-Boostrapping Dolos from a public relay node is the natural way of syncing the history of the chain but also a very slow option. It involves connecting to a single, public relay node using Ouroboros node-to-node mini-protocols and syncing the chain from origin.
+Boostrapping from a local full node is an efficient way to synchronize Dolos from a trusted source. The downside is having to run two processes (the source node + dolos) where some overlap exist. This method involves connecting via Ouroboros node-to-node mini-protocols.
 
 <Aside type="note">
-If you're looking for a faster way of bootstrapping Dolos, please refer to the alternative [Mithril](./mithril) option.
+If you're looking for way of bootstrapping Dolos but you don't have a local full node, please refer to the alternative [Public Relay](./relay) option.
 </Aside>
 
 In essence, this bootstrapping procedure is just about starting Dolos and let it do its thing. From Dolos' perspective, the procedure involves the following:
@@ -19,13 +17,17 @@ In essence, this bootstrapping procedure is just about starting Dolos and let it
 3. Start the chain-sync mini-protocol from origin
 4. Keep syncing until reaching the tip of the chain
 
+<Aside type="note">
+Syncing using node-to-client mini-protocols (aka: node socket) is being developed but not yet supported
+</Aside>
+
 ## Configuration
 
 To bootstrap using a public relay node, the only required configuration is the one inside the `upstream` section. You will probably have this configuration already since it's mandatory for almost every Dolos operation.
 
 | property      | type    | example                                    |
 | ------------- | ------- | ------------------------------------------ |
-| peer_address  | string  | "preprod-node.world.dev.cardano.org:30000" |
+| peer_address  | string  | "localhost:30000"                          |
 | network_magic | integer | 1                                          |
 | is_testnet    | boolean | true                                       |
 
@@ -33,18 +35,18 @@ To bootstrap using a public relay node, the only required configuration is the o
 - `network_magic`: the magic number of the network we're connecting to.
 - `is_tesnet`: flag to indicate if this network is a testent or not.
 
+<Aside type="tip">
+We use `localhost` as an example but it can also be a different hostname as long as the TCP port is reachable.
+</Aside>
+
 This is how the configuration fragment would look like inside a `dolos.toml` file:
 
 ```toml
 [upstream]
-peer_address = "preprod-node.world.dev.cardano.org:30000"
+peer_address = "localhost:30000"
 network_magic = 1
 is_testnet = true
 ```
-
-<Aside type="note">
-If you use the `dolos init` command to initialize your configuration, these values will be already populated with their defaults for each of the known networks.
-</Aside>
 
 ## Execution
 
@@ -54,7 +56,7 @@ To start the bootstrap procedure, you need to run the following command line:
 dolos sync
 ```
 
-The process will take from few hours to several days depending on the network. You'll see different log outputs, some lines will indicate the _slot_  of the latest block pulled from the relay node. Compare this value to the tip of the chain as shown in a public explorer to track the overall progress.
+The process will take several hours depending on the chain you're synchronizing. You'll see different log outputs, some lines will indicate the _slot_  of the latest block pulled from the relay node. Compare this value to the tip of the chain as shown in a public explorer to track the overall progress.
 
 <Aside type="note">
 The process support resuming from previous runs. You can safely interrupt the process and continue again from where you left off by just running the command again.
