--- a/docs/content/bootstrap/snapshot.mdx
+++ b/docs/content/bootstrap/snapshot.mdx
@@ -2,7 +2,9 @@
 title: Bootstrap using a Dolos Snapshot
 sidebar:
   label: Dolos Snapshot
+  order: 1
 ---
+
 import { Aside } from '@astrojs/starlight/components';
 
 TxPipe generates daily snapshots for the storage of Dolos. This comes in 2 varieties:
