--- a/docs/content/configuration/schema.mdx
+++ b/docs/content/configuration/schema.mdx
@@ -23,7 +23,7 @@ alonzo_path = "alonzo.json"
 conway_path = "conway.json"
 
 [chain]
-type = "Cardano"
+type = "cardano"
 
 [chain.track]
 seen_addresses = true
@@ -32,6 +32,7 @@ pool_state = true
 pool_delegator = true
 epoch_state = true
 account_activity = true
+drep_state = true
 
 [sync]
 pull_batch_size = 100
