--- a/docs/content/configuration/schema.mdx
+++ b/docs/content/configuration/schema.mdx
@@ -151,7 +151,7 @@ The `chain` section specifies the type of blockchain to connect to.
 - `epoch_state`: Tracks the state of epochs.
 - `account_activity`: Monitors activity related to accounts.
 - `reward_logs`: Keeps track of rewards for each delegator in each epoch
-- `drep_state`: Keeps track of Drep registraions each epoch
+- `drep_state`: Keeps track of Drep registration state in each epoch
 
 ## `sync` section
 
